update homepage ui

--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -1,95 +1,161 @@
 <footer>
-  <section class="primary-section">
-    <div class="container-1200">
+  <div class="footer-container"> 
+    <section class="primary-section">
       <div class="containers flex">
 
-        <div class="group">
+        <div class="group footer__first__list">
+          <div class="footer__logo">
+            <img src="/assets/img/footer/footer_logo.png" />
+          </div>
+          <ul class="group__list">
+            <li>
+              <a href="#">貸金業者登録番号</a>
+            </li>
+            <li>
+              <a href="#">関東財務局長（14）第00085号</a>
+            </li>
+            <li>
+              <a href="#">日本貸金業協会会員 第002346号</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="group"> 
           <div class="group__ttl">サービス</div>
-
           <ul class="group__list">
             <li>
-              <a href="/rosehip_polyphenol/">中小企業様向けサービス</a>
+              <a href="#">中小企業様向けサービス</a>
             </li>
             <li>
-              <a href="/cassis/">個人事業主様向けサービス</a>
+              <a href="#">個人事業主様向けサービス</a>
             </li>
             <li>
-              <a href="/salacia/">よくある質問</a>
+              <a href="#">カード会員様向けサービス</a>
             </li>
             <li>
-              <a href="/salacia/">導入事例</a>
+              <a href="#">よくある質問</a>
             </li>
             <li>
-              <a href="/salacia/">当社の強み</a>
+              <a href="#">導入事例</a>
+            </li>
+            <li>
+              <a href="#">当社の強み</a>
             </li>
           </ul>
         </div>
 
         <div class="group">
-          <div class="group__ttl">お問合せ</div>
+          <div class="group__ttl">目的から探す</div>
           <ul class="group__list">
             <li>
-              <a href="/catalog/">サービス資料ダウンロード</a>
+              <a href="#">ビジネスカードを作りたい</a> 
             </li>
             <li>
-              <a href="/contact/">お問合せ・ご相談</a>
+              <a href="#">経費を削減したい</a>
+            </li>
+            <li>
+              <a href="#">業務を効率化したい</a>
+            </li>
+            <li>
+              <a href="#">資金繰りを改善したい</a>
+            </li>
+            <li>
+              <a href="#">福利厚生を充実させたい</a>
             </li>
           </ul>
         </div>
 
         <div class="group">
-          <div class="group__ttl">その他</div>
+          <div class="group__ttl">お役立ち情報</div>
           <ul class="group__list">
             <li>
-              <a href="/strength/">選ばれる理由</a>
+              <a href="#">セミナー・動画</a> 
             </li>
             <li>
-              <a href="/company/">企業情報</a>
+              <a href="#">お役立ち資料</a>
+            </li>
+            <li>
+              <a href="#">お役立ちコラム</a>
+            </li>
+            <li>
+              <a href="#">ニュース</a>
             </li>
           </ul>
         </div>
-
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="secondary-section">
-    <div class="anc">
-      <div class="containers">
-        <ul class="flex jcC gap30 inherit anc__box">
-          <li>
-            <a href="#">ご相談・お問合せ</a>
-          </li>
-          <li>
-            <a href="#">サービス資料</a>
-          </li>
-          <li>
-            <a href="#">お役立ち資料</a>
-          </li>
-        </ul>
+    <section class="secondary-section">
+      <div class="anc">
+        <div class="containers">
+          <ul class="flex jcC gap30 inherit anc__box">
+            <li class="gradient__outline__button">
+              <a href="#">ご相談・お問合せ</a>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
+                viewBox="0 0 27 27">
+                <defs>
+                  <linearGradient id="linear-gradient" y1="1" x2="1" gradientUnits="objectBoundingBox">
+                    <stop offset="0" stop-color="#0497b5" />
+                    <stop offset="1" stop-color="#53d2b2" />
+                  </linearGradient>
+                </defs>
+                <g id="Group_13687" data-name="Group 13687" transform="translate(-459 -6215)">
+                  <circle id="Ellipse_137" data-name="Ellipse 137" cx="13.5" cy="13.5" r="13.5"
+                    transform="translate(459 6215)" fill="url(#linear-gradient)" />
+                  <path id="Path_44724" data-name="Path 44724" d="M7.437,0V7.437H0"
+                    transform="translate(465.039 6228.5) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+                </g>
+              </svg>
+            </li>
+            <li class="gradient__outline__button">
+              <a href="#">サービス資料</a>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
+                viewBox="0 0 27 27">
+                <defs>
+                  <linearGradient id="linear-gradient" y1="1" x2="1" gradientUnits="objectBoundingBox">
+                    <stop offset="0" stop-color="#0497b5" />
+                    <stop offset="1" stop-color="#53d2b2" />
+                  </linearGradient>
+                </defs>
+                <g id="Group_13687" data-name="Group 13687" transform="translate(-459 -6215)">
+                  <circle id="Ellipse_137" data-name="Ellipse 137" cx="13.5" cy="13.5" r="13.5"
+                    transform="translate(459 6215)" fill="url(#linear-gradient)" />
+                  <path id="Path_44724" data-name="Path 44724" d="M7.437,0V7.437H0"
+                    transform="translate(465.039 6228.5) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+                </g>
+              </svg>
+            </li>
+            <li class="gradient__outline__button">
+              <a href="#">お役立ち資料</a>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
+                viewBox="0 0 27 27">
+                <defs>
+                  <linearGradient id="linear-gradient" y1="1" x2="1" gradientUnits="objectBoundingBox">
+                    <stop offset="0" stop-color="#0497b5" />
+                    <stop offset="1" stop-color="#53d2b2" />
+                  </linearGradient>
+                </defs>
+                <g id="Group_13687" data-name="Group 13687" transform="translate(-459 -6215)">
+                  <circle id="Ellipse_137" data-name="Ellipse 137" cx="13.5" cy="13.5" r="13.5"
+                    transform="translate(459 6215)" fill="url(#linear-gradient)" />
+                  <path id="Path_44724" data-name="Path 44724" d="M7.437,0V7.437H0"
+                    transform="translate(465.039 6228.5) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+                </g>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <section class="tertiary-section">
-    <div class="container-1200">
-      <div class="flex aiC gap50 sec-news__box--item">
-        <dt class="flex aiC gap20 sp-fS">
-          <img src="/assets/img/footer/footer-title.png"/>
-        </dt>
-
-        <ul class="flex custom-list gap20">
-          <li>会社概要
-            <div class="square-container">
-              <div class="square before"></div>
-              <div class="square after"></div>
-            </div>
-          </li>
-
-          <li>プライバシーポリシー
+    </section>
+  </div>
+  <section class="tertiary-section"> 
+    <div class="flex aiC gap50 sec-news__box--item">
+      <ul class="flex custom-list gap27"> 
+        <li>会社概要
+          <div class="square-container">
             <div class="square before"></div>
             <div class="square after"></div>
-          </li>
+          </li> 
 
           <li>「個人情報の保護に関する法律」に基づく公表事項
             <div class="square-container">
@@ -114,19 +180,16 @@
         </ul>
       </div>
 
-      <div class="news-single__conts">
-        <p>貸金業者登録番号
-          <br>
-          関東財務局長（14）第00085号
-          <br>
-          日本貸金業協会会員 第002346号
-        </p>
-      </div>
-
-      <div class="copy-right">
-        <p>Copyright(C)CREDIT SAISON Co.,Ltd.All Rights Reserved.</p>
-      </div>
+        <li>サイトマップ
+          <div class="square-container">
+            <div class="square before"></div>
+            <div class="square after"></div>
+          </div>
+        </li>
+      </ul> 
     </div>
-  </div>
-</section>
+    <div class="copy-right">
+      <p>Copyright(C)CREDIT SAISON Co.,Ltd.All Rights Reserved.</p>
+    </div>
+  </section> 
 </footer>
