--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -25,6 +25,7 @@
 
 // 3 - Modules
 @import '3-modules/header';
+@import '3-modules/top-header';
 @import '3-modules/footer';
 @import '3-modules/heading';
 @import '3-modules/breadcrumb';
