--- a/app/assets/scss/2-basics/_base.scss
+++ b/app/assets/scss/2-basics/_base.scss
@@ -3,6 +3,15 @@
   common styles
   ----------------
 */
+$font-sizes: (10px, 11px, 12px, 13px, 14px, 15px, 16px, 18px, 20px, 22px, 24px, 25px, 28px, 30px, 32px, 36px, 40px);
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+);
 
 /*** 表示・非表示 ***/
 
@@ -93,16 +102,40 @@
       justify-content: space-between;
     }
   }
+  &.gap7 {
+    gap: 10px;
+    @media #{$sp} {
+      gap: 5px;
+    }
+  }
   &.gap10 {
     gap: 10px;
     @media #{$sp} {
       gap: 5px;
     }
   }
+  &.gap12 {
+    gap: 12px;
+    @media #{$sp} {
+      gap: 7px;
+    }
+  }
+  &.gap16 {
+    gap: 16px;
+    @media #{$sp} {
+      gap: 7px;
+    }
+  }
   &.gap20 {
     gap: 20px;
     @media #{$sp} {
       gap: 10px;
+    }
+  }
+  &.gap27 {
+    gap: 27px;
+    @media #{$sp} {
+      gap: 15px;
     }
   }
   &.gap30 {
@@ -167,6 +200,12 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  &.flex-end {
+    justify-content: flex-end;
+  }
+  &.flex-start {
+    justify-content: flex-start;
+  }
 }
 
 /***********/
@@ -303,3 +342,17 @@ main {
   max-width: 1200px;
   margin: auto;
  }
+/*** Font size ***/
+@each $value in $font-sizes {
+  .font-#{$value} {
+    font-size: $value !important;
+  }
+
+  @each $breakpoint, $screen-width in $grid-breakpoints {
+    @media (min-width: $screen-width) {
+      .font-#{$breakpoint}-#{$value} {
+        font-size: $value !important;
+      }
+    }
+  }
+}
