--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -670,3 +670,112 @@
     }
   }
 }
+
+.blue__outline__button {
+  position: relative;
+  max-width: 560px;
+  display: block;
+  margin: auto;
+
+  color: white;
+  background-color: transparent;
+  padding: 18px 0;
+  font-size: 16px;
+  text-align: center;
+
+  border: 2px solid $blue-color;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 3px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 20px;
+
+    width: 8px;
+    height: 8px;
+    margin: auto;
+    border-top: 3px solid $blue-color;
+    border-right: 3px px solid $blue-color;
+    transform: rotate(45deg);
+    transition: all .3s;
+  }
+
+  &__tittle {
+    color: $blue-color;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+  }
+}
+
+.black__pill__button {
+  color: $white-color;
+  font-size: 14px;
+  font-weight: 600;
+  border-bottom: 1px solid #707070;
+  border-radius: 11px;
+
+  padding: 0 15px;
+  background-color: $primary-color;
+}
+
+.gradient__button {
+  position: relative;
+  text-align: center;
+  background: $gradient-bg;
+  padding: 12px 35px;
+  color: #fff;
+  font-size: 20px;
+  box-shadow: none;
+  border: none;
+  border-radius: 3px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 20px;
+
+    width: 8px;
+    height: 8px;
+    margin: auto;
+    border-top: 2px solid $white-color;
+    border-right: 2px px solid $white-color;
+    transform: rotate(45deg);
+    transition: all .3s;
+  }
+}
+
+.gradient__outline__button {
+  max-width: 380px;
+  position: relative;
+  text-align: center;
+  background: white;
+  font-size: 20px;
+  box-shadow: none;
+  border: none;
+  border-radius: 3px;
+  &::before {
+    display: none;
+  }
+  svg {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 20px;
+
+    margin: auto;
+    border-top: 2px solid $white-color;
+    border-right: 2px px solid $white-color;
+    transition: all .3s;
+  }
+  a {
+    color: $blue-color;
+    padding: 20px 35px;
+  }
+}
