--- a/app/assets/scss/3-modules/_header.scss
+++ b/app/assets/scss/3-modules/_header.scss
@@ -80,9 +80,8 @@ header {
       height: 80px;
       align-items: center;
       background-color: #fff;
-
       .nav-list-logo {
-        max-width: 268px;
+        width: 350px;
       }
     }
 
