--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -599,7 +599,7 @@
 
 // ボタン07
 .btn07 {
-  background-color: #E1E1E1;
+  background-color: #e1e1e1;
   padding: 10px;
   width: 100%;
   border: 0;
@@ -609,6 +609,272 @@
   font-weight: bold;
   font-size: 16px;
   margin-bottom: 20px;
+}
+
+// ボタン08
+.btn08 {
+  display: inline-flex;
+  max-width: 560px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 12px 35px;
+  background: #0497b5;
+  box-shadow: none;
+  position: relative;
+  border-radius: 3px;
+  align-items: center;
+  margin: 0 auto;
+  @media #{$sp} {
+    font-size: 14px;
+    padding: 13px;
+    max-width: 85%;
+    border: 2px solid #0497b5;
+  }
+  &:hover {
+    opacity: 1;
+    background: #0497b5;
+    color: #fff;
+    &::before {
+      border-top: solid 3px #0497b5;
+      border-right: solid 3px #0497b5;
+    }
+  }
+  // サムネ付きボタン
+  &.thumb {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -50px;
+      margin: auto;
+      width: 126px;
+      height: 88px;
+      background: url("../img/common/img-thumb01.png") 50% / contain no-repeat;
+      transition: all 0.3s;
+      @media #{$sp} {
+        left: -30px;
+        width: 90px;
+        height: 55px;
+      }
+    }
+    &:hover {
+      &::after {
+        width: 136px;
+        height: 98px;
+      }
+    }
+  }
+  // 小さいボタン
+  &.small {
+    max-width: 330px;
+    padding: 10px;
+    &:before {
+      width: 6px;
+      height: 6px;
+      border-top: solid 2px #fff;
+      border-right: solid 2px #fff;
+    }
+    &:hover {
+      &::before {
+        border-top: solid 2px #f7a307;
+        border-right: solid 2px #f7a307;
+      }
+    }
+  }
+  // 最小ボタン
+  &.tiny {
+    font-size: 13px;
+    width: 140px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16);
+    &:before {
+      content: none;
+    }
+  }
+
+  svg {
+    margin-left: 15px;
+  }
+}
+
+// ボタン09
+.btn09 {
+  position: relative;
+  max-width: 560px;
+  display: block;
+  margin: auto;
+
+  color: white;
+  background-color: transparent;
+  padding: 18px 0;
+  font-size: 16px;
+  text-align: center;
+
+  border: 2px solid $blue-color;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 3px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 20px;
+
+    width: 8px;
+    height: 8px;
+    margin: auto;
+    border-top: 3px solid $blue-color;
+    border-right: 3px px solid $blue-color;
+    transform: rotate(45deg);
+    transition: all 0.3s;
+  }
+
+  &__tittle {
+    color: $blue-color;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+  }
+}
+
+// ボタン10
+.btn10 {
+  display: block;
+  max-width: 560px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  padding: 12px 35px;
+  background: $gradient-bg;
+  box-shadow: none;
+  position: relative;
+  border-radius: 3px;
+  margin: 0 auto;
+  border: none;
+  @media #{$sp} {
+    font-size: 14px;
+    padding: 13px;
+    max-width: 85%;
+    border: 2px solid $blue-color;
+  }
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 8px;
+    height: 8px;
+    right: 12px;
+    border-top: 2px solid #fff;
+    border-right: 2px solid #fff;
+    transform: rotate(45deg);
+    transition: all 0.3s;
+    @media #{$sp} {
+      right: 20px;
+    }
+  }
+  &:hover {
+    opacity: 1;
+    background: $gradient-bg;
+    color: #fff;
+    &::before {
+      border-top: 2px solid #fff;
+      border-right: 2px solid #fff;
+    }
+  }
+  // サムネ付きボタン
+  &.thumb {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -50px;
+      margin: auto;
+      width: 126px;
+      height: 88px;
+      background: url("../img/common/img-thumb01.png") 50% / contain no-repeat;
+      transition: all 0.3s;
+      @media #{$sp} {
+        left: -30px;
+        width: 90px;
+        height: 55px;
+      }
+    }
+    &:hover {
+      &::after {
+        width: 136px;
+        height: 98px;
+      }
+    }
+  }
+  // 小さいボタン
+  &.small {
+    display: inline-block;
+    font-size: 16px;
+    &:before {
+      width: 6px;
+      height: 6px;
+      border-top: 2px solid #fff;
+      border-right: 2px solid #fff;
+    }
+    &:hover {
+      &::before {
+        border-top: 2px solid #fff;
+        border-right: 2px solid #fff;
+      }
+    }
+  }
+  // 最小ボタン
+  &.tiny {
+    font-size: 13px;
+    width: 140px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.16);
+    &:before {
+      content: none;
+    }
+  }
+}
+
+// ボタン11
+.btn11 {
+  max-width: 380px;
+  position: relative;
+  text-align: center;
+  background: white;
+  font-size: 20px;
+  box-shadow: none;
+  border: none;
+  border-radius: 3px;
+  &::before {
+    display: none;
+  }
+  svg {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 20px;
+
+    margin: auto;
+    border-top: 2px solid $white-color;
+    border-right: 2px px solid $white-color;
+    transition: all 0.3s;
+  }
+  a {
+    color: $blue-color;
+    padding: 20px 35px;
+  }
 }
 
 // 吹き出し付きボタン
@@ -685,47 +951,6 @@
   }
 }
 
-.blue__outline__button {
-  position: relative;
-  max-width: 560px;
-  display: block;
-  margin: auto;
-
-  color: white;
-  background-color: transparent;
-  padding: 18px 0;
-  font-size: 16px;
-  text-align: center;
-
-  border: 2px solid $blue-color;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border-radius: 3px;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 20px;
-
-    width: 8px;
-    height: 8px;
-    margin: auto;
-    border-top: 3px solid $blue-color;
-    border-right: 3px px solid $blue-color;
-    transform: rotate(45deg);
-    transition: all .3s;
-  }
-
-  &__tittle {
-    color: $blue-color;
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-  }
-}
-
 .black__pill__button {
   color: $white-color;
   font-size: 14px;
@@ -735,61 +960,4 @@
 
   padding: 0 15px;
   background-color: $primary-color;
-}
-
-.gradient__button {
-  position: relative;
-  text-align: center;
-  background: $gradient-bg;
-  padding: 12px 35px;
-  color: #fff;
-  font-size: 20px;
-  box-shadow: none;
-  border: none;
-  border-radius: 3px;
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 20px;
-
-    width: 8px;
-    height: 8px;
-    margin: auto;
-    border-top: 2px solid $white-color;
-    border-right: 2px px solid $white-color;
-    transform: rotate(45deg);
-    transition: all .3s;
-  }
-}
-
-.gradient__outline__button {
-  max-width: 380px;
-  position: relative;
-  text-align: center;
-  background: white;
-  font-size: 20px;
-  box-shadow: none;
-  border: none;
-  border-radius: 3px;
-  &::before {
-    display: none;
-  }
-  svg {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 20px;
-
-    margin: auto;
-    border-top: 2px solid $white-color;
-    border-right: 2px px solid $white-color;
-    transition: all .3s;
-  }
-  a {
-    color: $blue-color;
-    padding: 20px 35px;
-  }
 }
