--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1800,7 +1800,7 @@
 
 // カード型 type19
 .card-type19 {
-  padding:0 30px 30px;
+  padding: 0 30px 30px;
 
   dd {
     margin-bottom: 30px;
@@ -1824,7 +1824,7 @@
 
 // カード型 type20
 .card-type20 {
-  padding:0 30px 30px;
+  padding: 0 30px 30px;
 
   &__box {
     &--ttl {
@@ -1879,6 +1879,98 @@
       padding: 30px 0;
       border: 1px solid #707070;
       text-align: center;
+    }
+  }
+}
+
+// カード型 type22
+.card-type22 {
+  position: relative;
+  color: white;
+  background-image: url("/assets/img/common/contact_banner.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 70px 120px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.55);
+  }
+  .ttl-notice {
+    position: relative;
+    color: $white-color;
+    z-index: 1;
+  }
+
+  .ttl-tertiary {
+    position: relative;
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 45px;
+    line-height: 51px;
+  }
+
+  .useful-wp {
+    position: relative;
+    margin-bottom: 0px;
+
+    .containers {
+      max-width: unset;
+      padding: 0;
+
+      .card {
+        max-width: 570px;
+
+        .card__box {
+          background-color: #fff;
+          padding: 40px 93px;
+
+          .card__box--ttl {
+            text-align: center;
+            color: #000000;
+            font-size: 22px;
+            margin-bottom: 20px;
+          }
+
+          .card__box--txt {
+            font-size: 16px;
+            font-weight: 400;
+            margin-bottom: 30px;
+            color: #000000;
+            text-align: center;
+          }
+
+          .more {
+            padding: 7px 0;
+            max-width: 287px;
+            background-color: #f29600;
+            border-color: #f29600;
+
+            &:hover {
+              color: white;
+
+              &::before {
+                color: white;
+              }
+            }
+          }
+        }
+
+        &:hover {
+          .more.bgY {
+            color: #fff;
+          }
+
+          .more.bgY:before {
+            border-top: 2px solid #fff;
+            border-right: 2px solid #fff;
+          }
+        }
+      }
     }
   }
 }
@@ -2741,7 +2833,7 @@
 .circle-list {
   padding: 30px;
   list-style-type: none;
-  background-color: #E1E1E1;
+  background-color: #e1e1e1;
 
   li {
     position: relative;
