--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -38,10 +38,10 @@
           </div>
 
           <div class="card--content">
-           <div class="card__header--btn">
-            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・<br>
-              アメリカン・エキスプレスカード</a>
-           </div>
+            <div class="card__header--btn">
+              <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・<br>
+                アメリカン・エキスプレスカード</a>
+            </div>
 
             <h4 class="ttl-quaternary">
               最強のコスパとマイル還元率の高さで選択
@@ -53,7 +53,13 @@
 
             <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネス・・・</h6>
 
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
+            <a href="#" class="btn08">
+              導入事例を見る
+              <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+                <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                  transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+              </svg>
+            </a>
           </div>
         </li>
 
@@ -79,7 +85,13 @@
 
             <h6 class="ttl-senary">今まではセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード（以下、プラチナビジネス）を・・・</h6>
 
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
+            <a href="#" class="btn08">
+              導入事例を見る
+              <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+                <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                  transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+              </svg>
+            </a>
           </div>
         </li>
 
@@ -105,7 +117,13 @@
 
             <h6 class="ttl-senary">マーケティング支援事業では一時的にクライアントの広告費を自社で負担して支払い、その数ヵ月後にクライアントから・・・</h6>
 
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
+            <a href="#" class="btn08">
+              導入事例を見る
+              <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+                <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                  transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+              </svg>
+            </a>
           </div>
         </li>
 
@@ -130,7 +148,13 @@
 
             <h6 class="ttl-senary">ETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間が・・・</h6>
 
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
+            <a href="#" class="btn08">
+              導入事例を見る
+              <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+                <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                  transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+              </svg>
+            </a>
           </div>
         </li>
 
@@ -155,10 +179,49 @@
 
             <h6 class="ttl-senary">全国各地にある社用車を管理する車輌課としては、経費削減とETC管理業務の効率化が課題でした。・・・</h6>
 
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
+            <a href="#" class="btn08">
+              導入事例を見る
+              <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+                <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                  transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+              </svg>
+            </a>
           </div>
         </li>
       </ul>
+    </div>
+  </section>
+
+  <section class="section-secondary">
+    <div class="card-type22">
+      <div class="ttl-notice">CONTACT</div>
+      <h3 class="ttl-tertiary">クレディセゾンの決済ソリューションが <br> お客様のビジネスにどのように役立つのかをご案内します </h3>
+      <div class="useful-wp">
+        <div class="containers">
+          <div class="flex jcC gap60">
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">サービス資料ダウンロード</div>
+                <div class="card__box--txt">クレディセゾンのソリューションの詳細がわかる
+                  <br>
+                  サービス資料をダウンロードいただけます。
+                </div>
+                <div><a class="btn10" href="#">サービス資料ダウンロード</a></div>
+              </summary>
+            </div>
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">ご相談・お問い合わせ</div>
+                <div class="card__box--txt">各種ソリューションに関するお問合せは
+                  <br>
+                  お気軽にお問い合わせください。
+                </div>
+                <div><a  class="btn10" href="#">ご相談・お問い合わせ</a></div>
+              </summary>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
