--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -183,7 +183,7 @@
             <div class="flex fS grid__card--cat">
               <span class="cat">ETCカード</span>
             </div>
-            <a href="#" class="btn01">
+            <a href="#" class="btn08">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -209,7 +209,7 @@
               <span class="cat">UCエクスプレスゴールドカード</span>
               <span class="cat">パーチェシングカード</span>
             </div>
-            <a href="#" class="btn01">
+            <a href="#" class="btn08">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -235,7 +235,7 @@
               <span class="cat">UCエクスプレスゴールドカード</span>
               <span class="cat">パーチェシングカード</span>
             </div>
-            <a href="#" class="btn01">
+            <a href="#" class="btn08">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -246,8 +246,8 @@
         </div>
       </div>
     </div>
-    <a href="#" class="blue__outline__button">
-      <span class="blue__outline__button__tittle">
+    <a href="#" class="btn09">
+      <span class="btn09__tittle">
         導入事例一覧を見る
       </span>
     </a>
@@ -270,7 +270,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="btn01">資料をダウンロード</a>
+              <a href="#" class="btn10 small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -284,7 +284,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="btn01">資料をダウンロード</a>
+              <a href="#" class="btn10 small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -298,15 +298,15 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="btn01">資料をダウンロード</a>
+              <a href="#" class="btn10 small">資料をダウンロード</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <a href="#" class="blue__outline__button">
-      <span class="blue__outline__button__tittle">
+    <a href="#" class="btn09">
+      <span class="btn09__tittle">
         お役立ち資料一覧を見る
       </span>
     </a>
@@ -421,8 +421,8 @@
         </div>
       </div>
     </div>
-    <a href="#" class="blue__outline__button">
-      <span class="blue__outline__button__tittle">
+    <a href="#" class="btn09">
+      <span class="btn09__tittle">
         セミナー・イベント情報一覧を見る
       </span>
     </a>
@@ -480,38 +480,40 @@
         </div>
       </div>
     </div>
-    <a href="#" class="blue__outline__button">
-      <span class="blue__outline__button__tittle">
+    <a href="#" class="btn09">
+      <span class="btn09__tittle">
         お知らせ一覧を見る
       </span>
     </a>
   </section>
 
   <section class="octonary-section">
-    <div class="ttl-notice">CONTACT</div>
-    <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
-    <div class="useful-wp">
-      <div class="containers">
-        <div class="flex jcC gap60">
-          <div href="#" class="card">
-            <summary class="card__box">
-              <div class="card__box--ttl">サービス資料ダウンロードはこちら</div>
-              <div class="card__box--txt">クレディセゾンのソリューションの詳細が分かる 
-                <br>
-                サービス資料をダウンロードいただけます。
-              </div>
-              <div class="gradient__button"><a href="#">サービス資料ダウンロード</a></div>
-            </summary>
-          </div>
-          <div href="#" class="card">
-            <summary class="card__box">
-              <div class="card__box--ttl">ご相談・お問合せはこちら</div>
-              <div class="card__box--txt">各種ソリューションに関するお問合せは
-                <br>
-                サービス資料をダウンロードいただけます。
-              </div>
-              <div class="gradient__button"><a href="#">お気軽にお問い合わせください。</a></div>
-            </summary>
+    <div class="card-type22">
+      <div class="ttl-notice">CONTACT</div>
+      <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
+      <div class="useful-wp">
+        <div class="containers">
+          <div class="flex jcC gap60">
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">サービス資料ダウンロードはこちら</div>
+                <div class="card__box--txt">クレディセゾンのソリューションの詳細が分かる
+                  <br>
+                  サービス資料をダウンロードいただけます。
+                </div>
+                <div ><a class="btn10" href="#">サービス資料ダウンロード</a></div>
+              </summary>
+            </div>
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">ご相談・お問合せはこちら</div>
+                <div class="card__box--txt">各種ソリューションに関するお問合せは
+                  <br>
+                  サービス資料をダウンロードいただけます。
+                </div>
+                <div><a class="btn10" href="#">お気軽にお問い合わせください。</a></div>
+              </summary>
+            </div>
           </div>
         </div>
       </div>
